--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -68,8 +68,8 @@
    "footer_privacy_tos_PD":"Pitch Deck",
    "footer_contactus_title":"СВЯЗАТЬСЯ С НАМИ",
    "footer_contactus_1":"Адрес: 85 Грейт-Портленд-стрит, W1W 7LT, Лондон, Великобритания.",
-   "footer_contactus_2":"Саалы Темирканов: Контакты +44 77711 991954, Email: st@mydatacoin.io",
-   "footer_contactus_3":"Дастан Догоев: Контакты +996 777 330 831, Email: dd@mydatacoin.io",
-   "footer_contactus_4":"Азимбек Сагынбаев: Контакты +420 774 958 325, Email: as@mydatacoin.io",
+   "footer_contactus_2":"Саалы Темирканов: Контакты +44 77711 991954, Email: st{'@'}mydatacoin.io",
+   "footer_contactus_3":"Дастан Догоев: Контакты +996 777 330 831, Email: dd{'@'}mydatacoin.io",
+   "footer_contactus_4":"Азимбек Сагынбаев: Контакты +420 774 958 325, Email: as{'@'}mydatacoin.io",
    "scrooltop":"НА ВВЕРХ"
 }
