--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -68,8 +68,8 @@
    "footer_privacy_tos_PD":"Pitch Deck",
    "footer_contactus_title":"CONTACT US",
    "footer_contactus_1":"Address: 85 Great Portland Street, W1W 7LT, London, UK.",
-   "footer_contactus_2":"Mr. Saaly Temirkanov: Phone +44 77711 991954, Email: st@mydatacoin.io",
-   "footer_contactus_3":"Mr. Dastan Dogoev: Phone +996 777 330 831, Email: dd@mydatacoin.io",
-   "footer_contactus_4":"Mr. Azimbek Sagynbaev: Phone +420 774 958 325, Email: as@mydatacoin.io",
+   "footer_contactus_2":"Mr. Saaly Temirkanov: Phone +44 77711 991954, Email: st{'@'}mydatacoin.io",
+   "footer_contactus_3":"Mr. Dastan Dogoev: Phone +996 777 330 831, Email: dd{'@'}mydatacoin.io",
+   "footer_contactus_4":"Mr. Azimbek Sagynbaev: Phone +420 774 958 325, Email: as{'@'}mydatacoin.io",
    "scrooltop":"SCROOL TOP"
 }
