--- a/src/i18n/kz.json
+++ b/src/i18n/kz.json
@@ -68,8 +68,8 @@
    "footer_privacy_tos_PD":"Pitch Deck",
    "footer_contactus_title":"БІЗБЕН ХАБАРЛАСЫҢЫЗ",
    "footer_contactus_1":"Адрес: 85 Грейт-Портленд-стрит, W1W 7LT, Лондон, Великобритания.",
-   "footer_contactus_2":"Саалы Темирканов: Байланыс +44 77711 991954, Email: st@mydatacoin.io",
-   "footer_contactus_3":"Дастан Догоев: Байланыс +996 777 330 831, Email: dd@mydatacoin.io",
-   "footer_contactus_4":"Азимбек Сагынбаев: Байланыс +420 774 958 325, Email: as@mydatacoin.io",
+   "footer_contactus_2":"Саалы Темирканов: Байланыс +44 77711 991954, Email: st{'@'}mydatacoin.io",
+   "footer_contactus_3":"Дастан Догоев: Байланыс +996 777 330 831, Email: dd{'@'}mydatacoin.io",
+   "footer_contactus_4":"Азимбек Сагынбаев: Байланыс +420 774 958 325, Email: as{'@'}mydatacoin.io",
    "scrooltop":"ЖОҒАРЫҒА"
 }
